--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -20,24 +20,26 @@ dependencies:
   # Swap the connectivity package for this
   data_connection_checker: ^0.3.4
   # Service locator
-  get_it: ^4.0.2
-  # Bloc for state management
-  flutter_bloc: ^4.0.0
+  get_it: ^5.0.1
   # Value equality
   equatable: ^1.2.5
   # Functional programming thingies
-  dartz: ^0.8.9
+  dartz: ^0.9.2
   # Remote API
   #connectivity: ^0.4.3+7
   chopper: ^3.0.1
   # Secure store cache
   flutter_secure_storage: ^3.3.1+1
   # timber log
-  fimber: ^0.4.0
+  fimber: ^0.4.4
   # make work with union easier
   freezed_annotation: ^0.7.1
   #room db
   moor_flutter: ^2.1.1
+
+  # Bloc for state management
+  bloc: ^6.1.0
+  flutter_bloc: ^6.1.0
 
 
   splash:
@@ -53,7 +55,7 @@ dependencies:
     path: ./core
 
 dev_dependencies:
-  lint: ^1.1.1
+  lint: ^1.3.0
   flutter_test:
     sdk: flutter
   # The following adds the launcher icon support to your application.
@@ -73,18 +75,10 @@ flutter_icons:
   image_path: "assets/launcher/ic_launcher.png"
   android: true
   ios: true
-  #image_path_ios: "assets/launcher/ic_launcher.png"
-  #image_path_android: "assets/launcher/icon.png"
-  #adaptive_icon_background: "assets/launcher/background.png"
-  #adaptive_icon_foreground: "assets/launcher/foreground.png"
 
 
 # The following section is specific to Flutter.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
@@ -92,17 +86,6 @@ flutter:
     - assets/materials/
     - assets/launcher/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
   fonts:
     - family: Raleway
       fonts:
@@ -113,13 +96,3 @@ flutter:
     - family:  Iconfont
       fonts:
        - asset: assets/fonts/Iconfont.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
