--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   # Functional programming thingies
   dartz: ^0.9.2
 
+  chopper: ^3.0.6
+  
   freezed_annotation: ^0.12.0
 
   #Date format
