--- a/signin/pubspec.yaml
+++ b/signin/pubspec.yaml
@@ -17,7 +17,24 @@ dependencies:
 
   equatable: ^1.2.5
 
+  dartz: ^0.9.2
+
   chopper: ^3.0.6
+
+  json_annotation: ^3.1.1
+
+   # Bloc for state management
+  bloc: ^6.1.0
+  flutter_bloc: ^6.1.0
+
+  # Implement generic validation
+  verify: ^1.1.1
+
+  # make work with union easier
+  freezed_annotation: ^0.12.0
+
+  # Service locator
+  get_it: ^5.0.1
 
   core_packages:
     path: ../core
@@ -26,7 +43,9 @@ dependencies:
     path: ../widget
 
   nb_utils: ^3.2.11+4
+
   cached_network_image: ^2.3.3
+
   flutter_statusbarcolor: ^0.2.3
 
 dev_dependencies:
@@ -34,6 +53,8 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^1.10.6 #-> flutter packages pub run build_runner watch --delete-conflicting-outputs
   chopper_generator: ^3.0.6
+  json_serializable: ^3.5.0
+  freezed: ^0.12.3
 
 flutter:
   uses-material-design: true
