--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   # Secure store cache
   flutter_secure_storage: ^3.3.1+1
   # timber log
-  fimber: ^0.4.4
+  flutter_fimber: ^0.4.4
   # make work with union easier
   freezed_annotation: ^0.12.0
   #room db
