--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_secure_storage: ^3.3.1+1
   # timber log
   flutter_fimber: ^0.4.4
+  logging: ^0.11.4
   # make work with union easier
   freezed_annotation: ^0.12.0
   #room db
