--- a/signin/pubspec.yaml
+++ b/signin/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
 
   widget:
     path: ../widget
+  
+  #Converters & built value integration chopper
+  built_value: ^7.1.0
 
   nb_utils: ^3.2.11+4
 
@@ -49,8 +52,10 @@ dependencies:
   flutter_statusbarcolor: ^0.2.3
 
 dev_dependencies:
+  #lint: ^1.3.0
   flutter_test:
     sdk: flutter
+  #built_value_generator: ^7.1.0
   build_runner: ^1.10.6 #-> flutter packages pub run build_runner watch --delete-conflicting-outputs
   chopper_generator: ^3.0.6
   json_serializable: ^3.5.0
