--- a/signin/pubspec.yaml
+++ b/signin/pubspec.yaml
@@ -21,8 +21,6 @@ dependencies:
 
   chopper: ^3.0.6
 
-  json_annotation: ^3.1.1
-
    # Bloc for state management
   bloc: ^6.1.0
   flutter_bloc: ^6.1.0
@@ -55,10 +53,9 @@ dev_dependencies:
   #lint: ^1.3.0
   flutter_test:
     sdk: flutter
-  #built_value_generator: ^7.1.0
-  build_runner: ^1.10.6 #-> flutter packages pub run build_runner watch --delete-conflicting-outputs
-  chopper_generator: ^3.0.6
-  json_serializable: ^3.5.0
-  freezed: ^0.12.3
+  built_value_generator: ^7.1.0
+  build_runner: ^1.10.2 #-> flutter packages pub run build_runner watch --delete-conflicting-outputs
+  chopper_generator: ^3.0.3
+  freezed: ^0.12.2
 
 flutter:
