--- a/share_module/pubspec.yaml
+++ b/share_module/pubspec.yaml
@@ -1,5 +1,5 @@
-name: core_packages
-description: Share core package
+name: share_module
+description: Shared package
 version: 0.0.1
 author:
 homepage:
