--- a/common_ui/pubspec.yaml
+++ b/common_ui/pubspec.yaml
@@ -1,5 +1,5 @@
-name: widget
-description: Awesome widgets package.
+name: common_ui
+description: Awesome shared widgets package.
 version: 0.0.1
 author:
 homepage:
