--- a/signin/pubspec.yaml
+++ b/signin/pubspec.yaml
@@ -34,11 +34,11 @@ dependencies:
   # Service locator
   get_it: ^5.0.1
 
-  core_packages:
-    path: ../core
+  share_module:
+    path: ../share_module
 
-  widget:
-    path: ../widget
+  common_ui:
+    path: ../common_ui
   
   #Converters & built value integration chopper
   built_value: ^7.1.0
