--- a/share_module/pubspec.yaml
+++ b/share_module/pubspec.yaml
@@ -17,13 +17,11 @@ dependencies:
   equatable: ^1.2.5
   # Functional programming thingies
   dartz: ^0.9.2
-
   chopper: ^3.0.6
-  
   freezed_annotation: ^0.12.0
-
   #Date format
   intl: ^0.16.1
+  flutter_statusbarcolor: ^0.2.3
 
 dev_dependencies:
   lint: ^1.3.0
