--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: libertime
 description: A new Flutter application.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
   sdk: ">=2.10.0 <3.0.0"
@@ -9,25 +8,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  # Service locator
   get_it: ^5.0.1
-  # Value equality
   equatable: ^1.2.5
-  # Functional programming thingies
   dartz: ^0.9.2
-  # timber log
   flutter_fimber: ^0.4.4
   logging: ^0.11.4
-  # make work with union easier
   freezed_annotation: ^0.12.0
-  #room db
   moor_flutter: ^3.1.0
-
-  # Bloc for state management
   bloc: ^6.1.0
   flutter_bloc: ^6.1.0
 
@@ -50,7 +38,7 @@ dependencies:
     path: ./share_module
 
 dev_dependencies:
-  lint: ^1.3.0
+  pedantic: ^1.9.2
   flutter_test:
     sdk: flutter
   # The following adds the launcher icon support to your application.
@@ -63,20 +51,13 @@ dev_dependencies:
   freezed: ^0.12.3
   moor_generator: ^3.4.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
 flutter_icons:
   image_path: "assets/launcher/ic_launcher.png"
   android: true
   ios: true
 
-
-# The following section is specific to Flutter.
 flutter:
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/launcher/
   fonts:
