--- a/share_module/pubspec.yaml
+++ b/share_module/pubspec.yaml
@@ -1,8 +1,6 @@
 name: share_module
 description: Shared package
 version: 0.0.1
-author:
-homepage:
 
 environment:
   sdk: ">=2.10.0 <3.0.0"
@@ -10,21 +8,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
-  # Networking checking
   data_connection_checker: ^0.3.4
-  # Value equality
   equatable: ^1.2.5
-  # Functional programming thingies
   dartz: ^0.9.2
   chopper: ^3.0.6
   freezed_annotation: ^0.12.0
-  #Date format
   intl: ^0.16.1
   flutter_statusbarcolor: ^0.2.3
 
 dev_dependencies:
-  lint: ^1.3.0
+  pedantic: ^1.9.2
   flutter_test:
     sdk: flutter
 
