--- a/share_ui/pubspec.yaml
+++ b/share_ui/pubspec.yaml
@@ -1,8 +1,6 @@
 name: share_ui
 description: Awesome shared widgets package.
 version: 0.0.1
-author:
-homepage:
 
 environment:
   sdk: ">=2.10.0 <3.0.0"
@@ -10,15 +8,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.0
-
-  #beauty bottom bar
   bottom_navy_bar: ^5.6.0
-
   flutter_spinkit: ^4.1.1+1
 
 dev_dependencies:
+  pedantic: ^1.9.2
   flutter_test:
     sdk: flutter
 
