--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: libertime
 description: A new Flutter application.
 version: 1.0.0
+publish_to: none
 
 environment:
   sdk: ">=2.10.0 <3.0.0"
