--- a/infrastructure/database/pubspec.yaml
+++ b/infrastructure/database/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
 
   moor: # use the latest version
-  sqlite3_flutter_libs: # Also use the latest version.
+  moor_flutter: ^3.1.0
   path_provider:
   path:
 
