--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dev_dependencies:
   # flutter packages get
   # flutter packages pub run flutter_launcher_icons:main
   flutter_launcher_icons: ^0.7.4
-  build_runner: ^1.10.9 #-> flutter packages pub run build_runner watch --delete-conflicting-outputs
+  build_runner: ^1.10.9 
+  # flutter packages pub run build_runner watch (--delete-conflicting-outputs)
+  # flutter packages pub run build_runner build (--delete-conflicting-outputs)
   chopper_generator: ^3.0.6
   freezed: ^0.12.3
   moor_generator: ^3.4.0
