--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.7.4
   build_runner: ^1.10.9 
   # flutter packages pub run build_runner watch (--delete-conflicting-outputs)
+  # flutter pub upgrade
   # flutter packages pub run build_runner build (--delete-conflicting-outputs)
   chopper_generator: ^3.0.6
   freezed: ^0.12.3
