--- a/features/pubspec.yaml
+++ b/features/pubspec.yaml
@@ -32,7 +32,7 @@ dependency_overrides:
   analyzer: ^0.41.2
 
 dev_dependencies:
-  pedantic: ^1.9.2
+  effective_dart: ^1.3.0
   flutter_test:
     sdk: flutter
   built_value_generator: ^7.1.0
