--- a/libraries/share_ui/pubspec.yaml
+++ b/libraries/share_ui/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   cached_network_image: ^2.3.3
 
 dev_dependencies:
-  pedantic: ^1.9.2
+  effective_dart: ^1.3.0
   flutter_test:
     sdk: flutter
 
