--- a/features/pubspec.yaml
+++ b/features/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   get_it: ^5.0.1
   built_value: ^7.1.0
   dart_nats: ^0.1.8
+  flutter_screenutil: ^4.0.2+8
+  flutter_tindercard: ^0.2.0
 
   common:
     path: ../libraries/common
