--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/launcher/
+    - assets/images/
   fonts:
     - family: Raleway
       fonts:
