--- a/features/pubspec.yaml
+++ b/features/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   dart_nats: ^0.1.8
   flutter_screenutil: ^4.0.2+8
   flutter_tindercard: ^0.2.0
+  flutter_fimber: ^0.4.4
 
   common:
     path: ../libraries/common
