--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   moor_flutter: ^3.1.0
   bloc: ^6.1.0
   flutter_bloc: ^6.1.0
+  flutter_screenutil: ^4.0.2+8
 
   share_ui:
     path: ./libraries/share_ui
