--- a/libraries/share_ui/pubspec.yaml
+++ b/libraries/share_ui/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter_spinkit: ^4.1.1+1
   nb_utils: ^3.3.0+8
-  cached_network_image: ^2.3.3
+  cached_network_image: ^2.5.0
+  flutter_screenutil: ^4.0.2+8
 
 dev_dependencies:
   effective_dart: ^1.3.0
