--- a/features/pubspec.yaml
+++ b/features/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_screenutil: ^4.0.2+8
   flutter_tindercard: ^0.2.0
   flutter_fimber: ^0.4.4
+  rive: ^0.6.7
 
   common:
     path: ../libraries/common
