--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="libertime"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAcm9D4HaPcqsQFOdk1ko0TNImC1pO8jm8"/>
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
