--- a/features/pubspec.yaml
+++ b/features/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_fimber: ^0.4.4
   rive: ^0.6.7
   google_maps_flutter: ^1.2.0
+  location: ^3.2.4
 
   common:
     path: ../libraries/common
