--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Allow use location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Allow always use location</string>
 </dict>
 </plist>
