[Theme] Use google font

--- a/libraries/share_ui/pubspec.yaml
+++ b/libraries/share_ui/pubspec.yaml
@@ -9,7 +9,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.0
-  flutter_spinkit: ^4.1.1+1
+  google_fonts: ^1.1.2
+  #flutter_spinkit: ^4.1.1+1
   nb_utils: ^3.3.0+8
   cached_network_image: ^2.5.0
   flutter_screenutil: ^4.0.2+8
