--- a/libraries/share_ui/pubspec.yaml
+++ b/libraries/share_ui/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   nb_utils: ^3.3.0+8
   cached_network_image: ^2.5.0
   flutter_screenutil: ^4.0.2+8
+  font_awesome_flutter: ^8.11.0
 
 dev_dependencies:
   effective_dart: ^1.3.0
