--- a/features/pubspec.yaml
+++ b/features/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   rive: ^0.6.7
   google_maps_flutter: ^1.2.0
   location: ^3.2.4
+  flutter_facebook_auth: ^2.0.2
 
   common:
     path: ../libraries/common
