--- a/libraries/share_ui/pubspec.yaml
+++ b/libraries/share_ui/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cached_network_image: ^2.5.0
   flutter_screenutil: ^4.0.2+8
   font_awesome_flutter: ^8.11.0
+  auto_size_text: ^2.1.0
 
 dev_dependencies:
   effective_dart: ^1.3.0
