--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,10 +34,10 @@ jobs:
     - run: flutter test
     
     # Build apk.
-    - run: flutter build apk
+    - run: flutter build appbundle
     
     # Upload generated apk to the artifacts.
     - uses: actions/upload-artifact@v1
       with:
-        name: release-apk
-        path: build/app/outputs/apk/release/app-release.apk
+        name: release-appbundle
+        path: build/app/outputs/appbundle/release/app-release.aab
