--- a/libraries/share_ui/pubspec.yaml
+++ b/libraries/share_ui/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_screenutil: ^4.0.2+8
   font_awesome_flutter: ^8.11.0
   auto_size_text: ^2.1.0
+  grouped_list: ^3.7.1
 
 dev_dependencies:
   effective_dart: ^1.3.0
