--- a/features/pubspec.yaml
+++ b/features/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.0
   equatable: ^1.2.5
+  logging: ^0.11.4
   dartz: ^0.9.2
   chopper: ^3.0.6
   bloc: ^6.1.0
@@ -22,7 +23,6 @@ dependencies:
   dart_nats: ^0.1.8
   flutter_screenutil: ^4.0.2+8
   flutter_tindercard: ^0.2.0
-  flutter_fimber: ^0.4.4
   rive: ^0.6.7
   google_maps_flutter: ^1.2.0
   location: ^3.2.4
