[Firebase] Integration facebook login

--- a/features/pubspec.yaml
+++ b/features/pubspec.yaml
@@ -28,6 +28,13 @@ dependencies:
   location: ^3.2.4
   flutter_facebook_auth: ^2.0.2
 
+  firebase_core: ^0.7.0
+  firebase_auth: ^0.20.1
+  firebase_analytics: ^7.0.1
+  cloud_firestore: ^0.16.0+1
+  firebase_storage: ^7.0.0
+  #google_sign_in:  ^5.0.0
+
   common:
     path: ../libraries/common
   share_ui:
