--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   moor_flutter: ^3.1.0
   bloc: ^6.1.0
   flutter_bloc: ^6.1.0
+  firebase_core: ^0.7.0
 
   share_ui:
     path: ./libraries/share_ui
