--- a/features/pubspec.yaml
+++ b/features/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   firebase_analytics: ^7.0.1
   cloud_firestore: ^0.16.0+1
   firebase_storage: ^7.0.0
-  #google_sign_in:  ^5.0.0
+  google_sign_in:  ^4.5.9
 
   common:
     path: ../libraries/common
