--- a/features/pubspec.yaml
+++ b/features/pubspec.yaml
@@ -13,11 +13,9 @@ dependencies:
   equatable: ^1.2.5
   logging: ^0.11.4
   dartz: ^0.9.2
-  chopper: ^3.0.6
   flutter_bloc: ^6.1.3
   verify: ^1.1.1
   freezed_annotation: ^0.12.0
-  built_value: ^7.1.0
   dart_nats: ^0.1.8
   flutter_screenutil: ^4.0.2+8
   flutter_tindercard: ^0.2.0
@@ -37,19 +35,16 @@ dependencies:
     path: ../libraries/common
   share_ui:
     path: ../libraries/share_ui
+  network:
+    path: ../libraries/network
   database:
     path: ../infrastructure/database
-
-dependency_overrides:
-  analyzer: ^0.41.2
 
 dev_dependencies:
   effective_dart: ^1.3.0
   flutter_test:
     sdk: flutter
-  built_value_generator: ^7.1.0
   build_runner:
-  chopper_generator: ^3.0.3
   freezed: ^0.12.2
 
 flutter:
