--- a/libraries/network/pubspec.yaml
+++ b/libraries/network/pubspec.yaml
@@ -1,5 +1,5 @@
-name: common
-description: common package
+name: network
+description: network package
 version: 0.0.1
 
 environment:
@@ -8,11 +8,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  data_connection_checker: ^0.3.4
-  equatable: ^1.2.5
-  dartz: ^0.9.2
-  freezed_annotation: ^0.12.0
-  intl: ^0.16.1
 
 dev_dependencies:
   pedantic: ^1.9.2
@@ -20,6 +15,5 @@ dev_dependencies:
     sdk: flutter
 
   build_runner:
-  freezed: ^0.12.3
 
 flutter:
