--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,10 @@ dev_dependencies:
   # flutter packages get
   # flutter packages pub run flutter_launcher_icons:main
   flutter_launcher_icons: ^0.7.4
-  build_runner: ^1.10.9 
+  build_runner:
   # flutter packages pub run build_runner watch (--delete-conflicting-outputs)
   # flutter pub upgrade
   # flutter packages pub run build_runner build (--delete-conflicting-outputs)
-  chopper_generator: ^3.0.6
 
 flutter_icons:
   image_path: "assets/launcher/ic_launcher.png"
