--- a/features/pubspec.yaml
+++ b/features/pubspec.yaml
@@ -22,14 +22,16 @@ dependencies:
   rive: ^0.6.7
   google_maps_flutter: ^1.2.0
   location: ^3.2.4
-  flutter_facebook_auth: ^2.0.2
+  flutter_riverpod: ^0.12.2
 
   firebase_core: ^0.7.0
   firebase_auth: ^0.20.1
   firebase_analytics: ^7.0.1
   cloud_firestore: ^0.16.0+1
   firebase_storage: ^7.0.0
+
   google_sign_in:  ^4.5.9
+  flutter_facebook_auth: ^2.0.2
 
   common:
     path: ../libraries/common
@@ -45,6 +47,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner:
-  freezed: ^0.12.2
+  freezed: ^0.12.7
 
 flutter:
