--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   logging: ^0.11.4
   flutter_bloc: ^6.1.3
   firebase_core: ^0.7.0
+  flutter_riverpod: ^0.12.2
 
   share_ui:
     path: ./libraries/share_ui
