--- a/libraries/share_ui/pubspec.yaml
+++ b/libraries/share_ui/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   font_awesome_flutter: ^8.11.0
   auto_size_text: ^2.1.0
   grouped_list: ^3.7.1
+  flushbar: ^1.10.4
 
 dev_dependencies:
   effective_dart: ^1.3.0
