--- a/libraries/share_ui/pubspec.yaml
+++ b/libraries/share_ui/pubspec.yaml
@@ -12,12 +12,12 @@ dependencies:
   google_fonts: ^1.1.2
   #flutter_spinkit: ^4.1.1+1
   nb_utils: ^3.3.0+8
-  cached_network_image: ^2.5.0
+  cached_network_image: ^2.5.1
   flutter_screenutil: ^4.0.2+8
   font_awesome_flutter: ^8.11.0
   auto_size_text: ^2.1.0
   grouped_list: ^3.7.1
-  flushbar: ^1.10.4
+  another_flushbar: ^1.10.13
 
 dev_dependencies:
   effective_dart: ^1.3.0
