--- a/features/pubspec.yaml
+++ b/features/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_analytics: ^7.0.1
   cloud_firestore: ^0.16.0+1
   firebase_storage: ^7.0.0
+  firebase_crashlytics: ^0.4.0+1
 
   google_sign_in:  ^4.5.9
   flutter_facebook_auth: ^2.0.2
