--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,10 @@ dependencies:
   cupertino_icons: ^1.0.0
   logging: ^0.11.4
   flutter_bloc: ^6.1.3
+
   firebase_core: ^0.7.0
+  firebase_crashlytics: ^0.4.0+1
+
   flutter_riverpod: ^0.12.2
 
   share_ui:
