--- a/features/pubspec.yaml
+++ b/features/pubspec.yaml
@@ -12,9 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   equatable: ^1.2.5
   logging: ^0.11.4
-  dartz: ^0.9.2
   flutter_bloc: ^6.1.3
-  verify: ^1.1.1
   freezed_annotation: ^0.12.0
   dart_nats: ^0.1.8
   flutter_screenutil: ^4.0.2+8
@@ -22,7 +20,9 @@ dependencies:
   rive: ^0.6.7
   google_maps_flutter: ^1.2.0
   location: ^3.2.4
-  flutter_riverpod: ^0.12.2
+
+  flutter_hooks: ^0.15.0
+  hooks_riverpod: ^0.12.2
 
   firebase_core: ^0.7.0
   firebase_auth: ^0.20.1
