--- a/libraries/share_ui/pubspec.yaml
+++ b/libraries/share_ui/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   auto_size_text: ^2.1.0
   grouped_list: ^3.7.1
   another_flushbar: ^1.10.13
+  flutter_hooks: ^0.15.0
 
 dev_dependencies:
   effective_dart: ^1.3.0
