--- a/infrastructure/database/pubspec.yaml
+++ b/infrastructure/database/pubspec.yaml
@@ -10,14 +10,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-  moor: # use the latest version
-  moor_flutter: ^3.1.0
-  path_provider:
-  path:
+  moor: ^3.4.0
+  #moor_flutter: ^3.1.0
+  sqlite3_flutter_libs: ^0.4.1
+  path_provider: ^1.6.28
+  path: ^1.7.0
 
 dev_dependencies:
   effective_dart: ^1.3.0
-  moor_generator: # use the latest version
+  moor_generator: ^3.4.0
   build_runner: 
   flutter_test:
     sdk: flutter
